# nodetool-lib-file

./: README.md  pyproject.toml
src/nodetool/dsl/lib/: docx.py  excel.py  pandoc.py  pdfplumber.py
src/nodetool/dsl/lib/file/: docx.py  excel.py  markdown.py  markitdown.py  pandoc.py  pdfplumber.py  pymupdf.py
src/nodetool/nodes/lib/: excel.py  pandoc.py
src/nodetool/nodes/lib/file/: docx.py  pdfplumber.py
src/nodetool/package_metadata/: nodetool-lib-file.json
