[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nodetool-lib-file"
version = "0.6.0"
description = "Nodetool File nodes"
readme = "README.md"
authors = ["Matthias Georgi <matti.georgi@gmail.com>"]
packages = [{ include = "nodetool", from = "src" }]
package-mode = true
include = ["src/nodetool/package-metadata/nodetool-lib-file.json"]

[tool.poetry.dependencies]
python = "^3.10"

# Document processing dependencies
python-docx = "1.1.2"
pdfplumber = "0.11.4"
paddleocr = "*"
paddlepaddle = "*"
PyMuPDF = "1.25.2"
pymupdf4llm = "0.0.17"
pytesseract = "0.3.13"


# File formats and parsing
openpyxl = "3.1.5"
pypandoc = "1.14.0"
svglib = "1.5.1"
markitdown = "0.0.1a3"
