[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodetool-lib-file"
version = "0.6.0"
description = "Nodetool File nodes"
readme = "README.md"
authors = [
    {name = "Matthias Georgi", email = "matti.georgi@gmail.com"}
]
requires-python = ">=3.11"

dependencies = [
    # Document processing dependencies
    "python-docx==1.1.2",
    "pdfplumber==0.11.4",
    "paddleocr",
    "paddlepaddle",
    "PyMuPDF==1.25.2",
    "pymupdf4llm==0.0.17",
    "pytesseract==0.3.13",
    # File formats and parsing
    "openpyxl==3.1.5",
    "pypandoc==1.14.0",
    "svglib==1.5.1",
    "markitdown==0.0.1a3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nodetool"]
artifacts = [
    "src/nodetool/package_metadata/nodetool-lib-file.json",
]
